--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
-version: '3'
+version: '3.8'
 
 networks:
   laravel:
 
 services:
-  nginx:
-    image: nginx:stable-alpine
-    container_name: nginx
+  nginx-laravel-demo:
+    image: nginx:1.19.0-alpine
+    container_name: nginx-laravel-demo
     ports:
-      - "8080:80"
+      - "1338:80"
     volumes:
-      - ./src:/var/www/html
+      - ./laravel-demo:/var/www/laravel-demo
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - php
+      - laravel-demo
       - db
     networks:
       - laravel
@@ -24,54 +24,24 @@ services:
     volumes:
       - ./db/:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5444:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=SUPER_SECRET_PASSWORD  
-  networks:
-      - laravel
-
-  php:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: php
-    volumes:
-      - ./src:/var/www/html
-    ports:
-      - "9000:9000"
     networks:
-      - laravel
+        - laravel
 
-  composer:
-    image: composer:latest
-    container_name: composer
-    volumes:
-      - ./src:/var/www/html
-    working_dir: /var/www/html
-    depends_on:
-      - php
-    networks:
-      - laravel
-
-  npm:
-    image: node:13.7
-    container_name: npm
-    volumes:
-      - ./src:/var/www/html
-    working_dir: /var/www/html
-    entrypoint: ['npm']
-
-  artisan:
+  laravel-demo:
     build:
-      context: .
+      context: laravel-demo
       dockerfile: Dockerfile
-    container_name: artisan
+    container_name: laravel-demo
+    env_file:
+      - ./laravel-demo/.env
     volumes:
-      - ./src:/var/www/html
+      - ./laravel-demo:/var/www/laravel-demo
+    working_dir: /var/www/laravel-demo
     depends_on:
       - db
-    working_dir: /var/www/html
-    entrypoint: ['php', '/var/www/html/artisan']
     networks:
       - laravel
